# Homework

./: README.md  generators.py  main.py  pyproject.toml
src/: decorators.py  external_api.py  file_reader.py  generators.py  masks.py  mylog.txt  processing.py  transactions.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_file_reader.py  test_generators.py  test_masks.py  test_processing.py  test_transactions.py  test_utils.py  test_widget.py
